fixed calculator bugs

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
                 <div class="numbers">
                     <div>0</div>
                     <div>.</div>
-                    <div id="clear">C</div>
+                    <div class = "clear" id="clear">C</div>
                 </div>
+                
             </div>
             <div class="equal" id="result">=</div>
         </div>
